fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -22,12 +22,13 @@ body {
 
  header {
   height: 80px;
+  width: 100%;
   overflow-y: hidden;
  }
 
 nav {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
